--- a/views/Blog.ejs
+++ b/views/Blog.ejs
@@ -1,3 +1,135 @@
 <%- include("partials/header") %>
-<h1>Blogs and Artiles</h1>
+<section id="Event2">
+ <h1 style="font-size:2.5rem; font-weight:bolder;  border-bottom:3px solid black; display:table-cell; padding-top:10%; padding-bottom:2px;">Blogs and Articles</h1><br><br><br>
+
+ <div class="card-columns">
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard.jpg" alt="Card image cap">
+     <div class="card-body">
+       <h5 class="card-title">Date</h5>
+       <p class="card-text">This is content. This content is a little bit longer.</p>
+       <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+     </div>
+   </div>
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard2.jpg" alt="Card image cap">
+     <div class="card-body">
+       <h5 class="card-title">Date</h5>
+       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+       <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+     </div>
+   </div>
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard4.jpg" alt="Card image cap">
+     <div class="card-body">
+        <h5 class="card-title">Date</h5>
+       <p class="card-text">This is a wider card with supporting sma kaud wi odqudqwwwwwwwwwwwwwww wwwwwwwwwwwwwwwwww wwwwwwwwwwwwwwwwwwwww wwwwwwwwwwwwwwww w w w w w www w w w w w w w w w w w w w w w w w w w w w i iww i wi w text below as a natural
+         lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+       <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+     </div>
+   </div>
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard4.jpg" alt="Card image cap">
+     <div class="card-body">
+       <h5 class="card-title">Date</h5>
+       <p class="card-text">This is a wider card with supporting sma kaud wi This card has even longer content than the first to show that equal height action.</p>
+       <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+     </div>
+   </div>
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard3.jpg" alt="Card image cap">
+     <div class="card-body">
+       <h5 class="card-title">Date</h5>
+       <p class="card-text">This is a wider card w w w w w w w i iww i wi w text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+       <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+     </div>
+   </div>
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard2.jpg" alt="Card image cap">
+     <div class="card-body">
+       <h5 class="card-title">Date</h5>
+       <p class="card-text">This is a wider card with supporting sma kaud w w w w w w www w w w w w w w w w w w w w w w w w w w w w i iww i wi w text below as a natural lead-in to additional content. This card has even longer content than the first
+         to show that equal height action.</p>
+       <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+     </div>
+   </div>
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard.jpg" alt="Card image cap">
+     <div class="card-body">
+       <h5 class="card-title">date</h5>
+       <p class="card-text">This is content. This content is a little bit longer.</p>
+       <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+     </div>
+   </div>
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard4.jpg" alt="Card image cap">
+     <div class="card-body">
+       <h5 class="card-title">Date</h5>
+       <p class="card-text">This is content. This content is a little bit longer.</p>
+       <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+     </div>
+   </div>
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard3.jpg" alt="Card image cap">
+     <div class="card-body">
+       <h5 class="card-title">Date</h5>
+       <p class="card-text">This is content. This content is a little bit longer.</p>
+       <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+     </div>
+   </div>
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard2.jpg" alt="Card image cap">
+     <div class="card-body">
+       <h5 class="card-title">Date</h5>
+       <p class="card-text">This is content. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+         aliqupidatat non proident, sunt laborum. This content is a little bit longer.</p>
+       <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+     </div>
+   </div>
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard.jpg" alt="Card image cap">
+     <div class="card-body">
+       <h5 class="card-title">Date </h5>
+       <p class="card-text">This is content. This content Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+         nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+         id est laborum.
+         is a little bit longer.</p>
+       <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+     </div>
+   </div>
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard4.jpg" alt="Card image cap">
+     <div class="card-body">
+       <h5 class="card-title">Date</h5>
+       <p class="card-text">This is content. This consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation u content is a little bit longer.</p>
+       <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+     </div>
+   </div>
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard3.jpg" alt="Card image cap">
+     <div class="card-body">
+       <h5 class="card-title">Date</h5>
+       <p class="card-text">This is content. This content consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud unt ut labore et dolore magna aliqua. Ut enim ad minim
+         veniam, quis nostrud exercitation u content exercitation uis a little bit longer.</p>
+       <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+     </div>
+   </div>
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard2.jpg" alt="Card image cap">
+     <div class="card-body">
+       <h5 class="card-title">Date</h5>
+       <p class="card-text">This is content. This content is a little bit longer.</p>
+     </div>
+     <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+   </div>
+   <div style="height:100% !important;" class="card">
+     <img style="width:100%; height:200px;" class="card-img-top" src="/images/Ecard3.jpg" alt="Card image cap">
+     <div class="card-body">
+       <h5 class="card-title">Date</h5>
+       <p class="card-text">This is a wider card with supporting sma kaud wiad-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+       <button style="border-radius:0;" type="button" class="btn btn-dark">Explore more</button>
+     </div>
+   </div>
+ </div>
+</section>
 <%- include("partials/footer") %>
