--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -1,3 +1,69 @@
 <%- include("partials/header") %>
-<h1>Contact us</h1>
+<div style="background:#f7f7f7; opacity:80%;">
+  <img src="/images/IDMA.png" class="center"style="width:5% ; height:5%;" alt="IDMA"><br>
+  <h1 style="text-align:center; font-size: 2.5rem !important;  font-family: 'Bree Serif', sans-serif !important;  font-weight: bolder !important; " > Contact Us</h1>
+</div>
+<section class="get_in_touch">
+  <h1 style="font-weight:bolder;" class="title2">Get In Touch</h1>
+  <div class="container">
+    <div class="contact-form row">
+      <div class="form-field col-lg-6">
+        <input  required id="name"type="text" class="input-text" name="" value="">
+        <label for="name" class="label">name</label>
+      </div>
+      <div class="form-field col-lg-6">
+        <input required id="email"type="email" class="input-text" name="" value="">
+        <label for="email" class="label">email</label>
+      </div>
+      <div class="form-field col-lg-6">
+        <input required id="Company"type="text" class="input-text" name="" value="">
+        <label for="Company" class="label">Company name</label>
+      </div>
+      <div class="form-field col-lg-6">
+        <input required id="phone"type="text" class="input-text" name="" value="">
+        <label for="phone" class="label">Contact no.</label>
+      </div>
+      <div class="form-field col-lg-12">
+        <input required id="message"type="text" class="input-text" name="" value="">
+        <label for="message" class="label">Type your message....</label>
+      </div>
+      <div class="form-field col-lg-12">
+        <input class=" btn-danger submit-btn"type="submit" name="" value="submit">
+      </div>
+    </div>
+  </div>
+</section><br>
+<i  style="text-align:center;" class="far fa-2x fa-map-marker-alt"> Address- </i><br>
+<p style="text-align:center;color:#41aea9; font-size:1.4rem; font-family: 'Bree Serif', sans-serif !important;">
+Mada Center 8th floor, 379 Hudson St, New York, NY 10018 US</p><br>
+<i style="text-align:center; " class="far fa-2x fa-phone-alt"> Call Us-</i><br>
+<p  style="text-align:center;color:#41aea9; font-size:1.4rem;  font-family: 'Bree Serif', sans-serif !important;">
++91 800 1236879</p><br>
+<i style="text-align:center; " class="far fa-2x fa-envelope"> General Support-</i><br>
+<p  style="text-align:center; font-size:1.4rem; color:#41aea9;  font-family: 'Bree Serif', sans-serif !important;">
+contact@example.com</p><br><br>
+<p  style="text-align:center; font-size:1.9rem;  font-family: 'Bree Serif', sans-serif !important;">Or</p>
+<p  style="text-align:center; font-size:1.7rem;  font-family: 'Bree Serif', sans-serif !important;">Connect With Us-</p>
+<ul class="list-unstyled  text-center list-inline ">
+  <li class="list-inline-item">
+    <a class="btn-floating btn-fb mx-1">
+      <i style="color:#3b5998;" class="fab fa-3x fa-facebook-f"> </i>
+    </a>
+  </li>
+  <li class="list-inline-item">
+    <a class="btn-floating btn-tw mx-1">
+      <i style="color:#00acee;"class="fab fa-3x fa-twitter"> </i>
+    </a>
+  </li>
+  <li class="list-inline-item">
+    <a class="btn-floating btn-gplus mx-1">
+      <i style="color:#dd4b39;" class="fab fa-3x fa-google-plus-g"> </i>
+    </a>
+  </li>
+  <li class="list-inline-item">
+    <a class="btn-floating btn-li mx-1">
+      <i style="color:#0e76a8;" class="fab fa-3x fa-linkedin-in"> </i>
+    </a>
+  </li>
+</ul><br><br>
 <%- include("partials/footer") %>
