--- a/views/Membership.ejs
+++ b/views/Membership.ejs
@@ -1,3 +1,185 @@
 <%- include("partials/header") %>
-<h1>Membership</h1>
+<div data-aos="fade-down" class="membership">
+  <div style="text-align:center; padding:15px 0px; background:#e8ffff;" class="">
+    <span style="font-size:1.5rem; font-weight:bolder;">ANNUAL MEMBERSHIP IS NOW $149. (THAT'S ONLY $12.42/MONTH): <span style="font-size:1.2rem;">Check Out <a href="#">this week's perk exclusively for members.</a></span></span>
+  </div>
+  <div class="membership-text">
+    <div class="membership-h1">
+      <h1 style="padding-top:20%; font-size: 3.5rem; ">Free Training.</h1>
+      <h1 style=" font-size: 3.5rem;">New Benifits weekly.</h1>
+      <h1 style=" font-size: 3.5rem;">Amazing Value.</h1>
+    </div>
+    <p style=" font-size: 2rem;">Your Marketing Community Awaits.</p>
+  </div>
+</div>
+<section class="pricing py-5">
+  <div class="container">
+    <div class="row">
+      <!-- Free Tier -->
+      <div class="col-lg-4">
+        <div class="card mb-5 mb-lg-0">
+          <div class="card-body">
+            <h3 style="padding:15px 15px; font-weight:bolder;" class="text-center">Professional Or Academic Membership</h3>
+            <ul class="fa-ul">
+              <li style="font-size:1.2rem;font-family: 'Secular One', sans-serif;">Membership in a local chapter or academic special interest group</li>
+              <li style="font-size:1.2rem;font-family: 'Secular One', sans-serif;">Marketing News Magazine and Journals Access</li><br>
+              <li class="text-center" style="font-size:1.4rem;font-family: 'Secular One', sans-serif;">$12.42 / month*</li>
+              <li class="text-muted text-center">*$149 Billed Anually</li>
+            </ul>
+            <a href="#" class="btn btn-block btn-primary text-uppercase">Join</a>
+          </div>
+        </div>
+      </div>
+      <!-- Plus Tier -->
+      <div class="col-lg-4">
+        <div class="card mb-5 mb-lg-0">
+          <div class="card-body">
+            <h3 style="padding:15px 15px; font-weight:bolder;" class="text-center">Undergrad Student Membership</h3><br>
+            <ul class="fa-ul">
+              <li style="font-size:1.2rem;font-family: 'Secular One', sans-serif;">Membership in AMA Collegiate Chapter at your University</li>
+              <li style="font-size:1.2rem;font-family: 'Secular One', sans-serif;">Access to Collegiate events and competitions</li><br>
+              <li class="text-center" style="font-size:1.4rem;font-family: 'Secular One', sans-serif;">$2.42 / month*</li>
+              <li class="text-muted text-center">*$29 Billed Anually</li>
+            </ul>
+            <a href="#" class="btn btn-block btn-primary text-uppercase">Join</a>
+          </div>
+        </div>
+      </div>
+      <!-- Pro Tier -->
+      <div class="col-lg-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 style="padding:15px 15px; font-weight:bolder;" class="text-center">Group Membership</h3><br><br>
+            <ul class="fa-ul">
+              <li style="font-size:1.2rem;font-family: 'Secular One', sans-serif;">Multiple memberships managed by a single payer</li><br>
+              <li style="font-size:1.2rem;font-family: 'Secular One', sans-serif;">Multi-purchase student membership available</li><br>
+              <li class="text-center" style="font-size:1.4rem;font-family: 'Secular One', sans-serif; padding-top:12px;">$9.92 / month per person*</li>
+              <li class="text-muted text-center">*$119 Billed Anually</li>
+            </ul>
+            <a href="#" class="btn btn-block btn-primary text-uppercase">Join</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br><br><br><br><br>
+  <h2 style="font-family: 'Secular One', sans-serif;" class="text-center">Already a member or need to renew? <a style="border-bottom: 3px solid black;" href="/Login"> Login</a></h2><br><br><br>
+</section>
+<section style="text-align:center; padding:0% 10%; background:#f7f7f7;">
+  <div style="padding:3% 0%;" class="container">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="row">
+          <div style=" text-align:right;" class="col-lg-2">
+            <i style="background-color:#0d7377; color:white; padding:10px; border-radius:50%;" class="far  fa-4x fa-pencil-alt"></i>
+          </div>
+          <div class="col">
+            <div>
+              <h3 style="font-family: 'Secular One', sans-serif; text-align:left; ">Certifications</h3>
+              <h6 style=" font-weight:bolder; text-align:left; font-size:1.1rem;">AMA members get 30% off the cost of the PCM ® Content Marketing , Marketing Management , or Sales Management exmas.</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="row">
+          <div style=" text-align:left;" class="col-lg-2">
+            <i style="background-color:#fca652; color:white; padding:20px; border-radius:50%;" class="far  fa-3x fa-desktop"></i>
+          </div>
+          <div class="col">
+            <div style="padding-left:10px;">
+              <h3 style="font-family: 'Secular One', sans-serif; text-align:left; ">Essential Resources and Tools</h3>
+              <h6 style=" font-weight:bolder; text-align:left; font-size:1.1rem;">Members-only content, Marketer's Toolkits including essential templates and webinars both live and on-demand.</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div style="margin-top:7%;" class="row">
+      <div class="col-lg-6">
+        <div class="row">
+          <div style=" text-align:right;" class="col-lg-2">
+            <i style="background-color:#32e0c4; color:white; padding:10px; border-radius:50%;" class="far  fa-4x fa-lightbulb"></i>
+          </div>
+          <div class="col">
+            <div>
+              <h3 style="font-family: 'Secular One', sans-serif; text-align:left; ">Micro-Internship Program</h3>
+              <h6 style=" font-weight:bolder; text-align:left; font-size:1.1rem;">get immediate support on tasks that may not be the best use of your time, while also harnessing the creativiity and innovation of emerging professionals.</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="row">
+          <div style=" text-align:left;" class="col-lg-2">
+            <i style="background-color:#821752; color:white; padding:20px; border-radius:50%;" class="far  fa-3x fa-envelope"></i>
+          </div>
+          <div class="col">
+            <div style="padding-left:10px;">
+              <h3 style="font-family: 'Secular One', sans-serif; text-align:left; "> Micro-Internship Program</h3>
+              <h6 style=" font-weight:bolder; text-align:left; font-size:1.1rem;">Get immdeiate support on tasks that may not be the best use of your time, while also harnessing the creativity and innovation of emerging professionals.</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div style="margin-top:7%;" class="row">
+      <div class="col-lg-6">
+        <div class="row">
+          <div style=" text-align:right;" class="col-lg-2">
+            <i style="background-color:orange; color:white; padding:10px; border-radius:50%;" class="far  fa-4x fa-chart-bar"></i>
+          </div>
+          <div class="col">
+            <div>
+              <h3 style="font-family: 'Secular One', sans-serif; text-align:left; ">Academic Journals</h3>
+              <h6 style=" font-weight:bolder; text-align:left; font-size:1.1rem;">Digital access to AMA's academic journals: Journal of Marketing, Journal of Marketing research, Journal of public policy and Marketing, and Journal of International Marketing.</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="row">
+          <div style=" text-align:left;" class="col-lg-2">
+            <i style="background-color:#931a25; color:white; padding:20px; border-radius:50%;" class="far  fa-3x fa-shopping-cart"></i>
+          </div>
+          <div class="col">
+            <div style="padding-left:10px;">
+              <h3 style="font-family: 'Secular One', sans-serif; text-align:left; ">Discounts and Affinity Benifits</h3>
+              <h6 style=" font-weight:bolder; text-align:left; font-size:1.1rem;">Great rates and exclusive discounts on services like rental cars, hotel rooms, business supplies, credit card processing, UPS shipping and more.</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div style="margin-top:7%;" class="row">
+      <div class="col-lg-6">
+        <div class="row">
+          <div style=" text-align:right;" class="col-lg-2">
+            <i style="background-color:#0d7377; color:white; padding:10px; border-radius:50%;" class="fab  fa-4x fa-pagelines"></i>
+          </div>
+          <div class="col">
+            <div>
+              <h3 style="font-family: 'Secular One', sans-serif; text-align:left; ">Promotional Product Discounts</h3>
+              <h6 style=" font-weight:bolder; text-align:left; font-size:1.1rem;">Unlimited free shipping, 30 minutes of design consultation and the best pricing on bulk promotional ordered through Memberpromos.com</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="row">
+          <div style=" text-align:left;" class="col-lg-2">
+            <i style="background-color:#fca652; color:white; padding:20px; text-align:right;border-radius:50%;" class="fa-3x fas fa-dollar-sign"></i>
+          </div>
+          <div class="col">
+            <div style="padding-left:10px;">
+              <h3 style="font-family: 'Secular One', sans-serif; text-align:left; ">Training, Bootcamps, Conferences</h3>
+              <h6 style=" font-weight:bolder; text-align:left; font-size:1.1rem;">Recieve discounts on national and local AMA events where thought leaders across industries share theit insights.</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br><br>
+</section>
 <%- include("partials/footer") %>
