--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,16 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Website</title>
+  <title>IDMA</title>
+    <link rel="icon" href="images/favicon.ico">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet"
   <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   <!-- Bootstrap core CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
@@ -32,12 +38,12 @@
 </head>
 
 <body>
-  <nav data-aos="fade-down" id="head" style="padding: 1.5% 11% 0.9% 5%; border:2px solid #008891; border-bottom:6px solid #008891; font-size:1.1rem;" class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+  <nav data-aos="fade-down" id="head" style="padding: .2% 7% 0.6% 5%; border:2px solid #008891; border-bottom:6px solid #008891; font-size:1.1rem;" class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
     <button  type="button" class="navbar-toggler bg-dark" data-toggle="collapse" data-target="#collapse_target" name="button">
       <span  class="navbar-toggler-icon bg-dark"></span></button>
     <div class="collapse navbar-collapse" id="collapse_target">
-      <a href="/" style="color:black !important; font-weight:bolder;" class="navbar-brand">Logo</a>
-      <span style="color:black !important; font-weight:bolder;" class="navbar-text">IDMA</span>
+      <a href="/" style="color:black !important; font-weight:bolder;" class="navbar-brand"> <img src="/images/IDMA.png" style="width: 60px; height:60px;" alt="LOGO"> </a>
+      <span style="color:black !important; font-family: 'Acme', sans-serif; font-weight:bolder; font-size:1.5rem;" class="navbar-text">IDMA</span>
       <ul class="navbar-nav ml-auto">
         <li  class="nav-item nav-head-items"> <a style="color:black !important; font-weight:bolder;" class="nav-link" href="/About">About Us</a></li>
         <li  class="nav-item nav-head-items dropdown"> <a style="color:black !important; font-weight:bolder;" class="nav-link dropdown-toggle" data-toggle="dropdown" data-target="dropdown_target" href="#">Membership
