--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,6 +5,70 @@ html{
 .nav-item{
   padding: 0px 10px 0px;
 }
+.get_in_touch{
+  max-width: 800px;
+  margin: 50px auto;
+  position: relative;
+  box-shadow: 0 10px 30px 0px rgba(0,0,0,.1);
+  padding: 30px;
+}
+.get_in_touch .title2{
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 3px;
+  font-size: 3rem;
+  line-height: 48px;
+  padding-bottom: 20px;
+  color: #5543ca;
+  background-color: black;
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+}
+.contact-form .form-field{
+  position: relative;
+  margin: 32px 0;
+}
+.contact-form .input-text:focus + .label,
+.contact-form .input-text.not-empty + .label{
+  transform:  translateY(-24px);
+}
+.contact-form .input-text{
+  display: block;
+  width: 100%;
+  height: 36px;
+  border-width: 0 0 2px 0;
+  border-color: black;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 400;
+}
+.contact-form .input-text:focus{
+  outline: none;
+}
+.contact-form .label{
+  position: absolute;
+  left:20px;
+  bottom: 11px;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 400;
+   color: black;
+   cursor: text;
+   text-transform: capitalize;
+   transition: transform 0.2s ease-in-out;
+}
+.contact-form .submit-btn{
+  display: inline-block;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 16px;
+  padding: 8px 16px;
+  border: none;
+  width: 200px;
+  cursor: pointer;
+
+}
 body{
   min-height: 100%;
   display: flex;
@@ -13,8 +77,34 @@ body{
 footer{
   margin-top: auto;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  padding-top: 2%;
+}
+
+#About-head{
+  font-size: 2.5rem;
+  border-bottom: 5px solid #41aea9;
+  border-radius: 4px;
+  display: table-cell;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bolder;
+}
+.About-para{
+    padding: 0% 5% .5%!important;
+}
+#About{
+  padding: 0% 6%;
+}
 #head{
   background-color: white !important;
+}
+.d-block{
+  width: 100%;
+  height: 100vh;
 }
 .nav-head-items:hover{
 
@@ -39,7 +129,7 @@ footer{
   background-color: #838383;
 }
 #Landing{
-  background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url("../images/Home.jpg");
+  background: linear-gradient(rgba(0,0,0,.2), rgba(0,0,0,.2)), url("../images/Home.jpg");
   background-size: cover;
   color: white;
   height: 100vh;
@@ -83,4 +173,276 @@ footer{
 .head-para{
   font-weight: bold;
   font-size: 1.05rem;
+}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap');
+
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
+}
+
+.dropdown:hover>.dropdown-menu {
+  display: block;
+}
+
+.dropdown-menu {
+  background-color: black !important;
+}
+
+.dropdown-item {
+  color: white !important;
+}
+
+.dropdown-item:hover {
+  color: black !important;
+}
+
+.footer-links:hover {
+  background-color: #838383;
+}
+
+.stylish-color-dark {
+  background-color: #3e4551 !important
+}
+
+footer.page-footer {
+  bottom: 0;
+  color: #fff
+}
+
+footer.page-footer .container-fluid {
+  width: auto
+}
+
+footer.page-footer .footer-copyright {
+  overflow: hidden;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(0, 0, 0, 0.2)
+}
+
+footer.page-footer a {
+  color: #fff
+}
+
+.font-small {
+  font-size: .9rem
+}
+
+text-md-left {
+  text-align: left !important
+}
+
+.col-md-4 {
+  -ms-flex: 0 0 33.333333%;
+  flex: 0 0 33.333333%;
+  max-width: 33.333333%
+}
+
+.mx-auto {
+  margin-right: auto !important
+}
+
+.mx-auto {
+  margin-left: auto !important
+}
+
+.mt-3 {
+  margin-top: 1rem !important
+}
+
+.mb-4 {
+  margin-bottom: 1.5rem !important
+}
+
+.list-unstyled {
+  padding-left: 0;
+  list-style: none
+}
+
+.list-inline {
+  padding-left: 0;
+  list-style: none
+}
+
+.list-inline-item {
+  display: inline-block
+}
+
+.mx-1 {
+  margin-right: .25rem !important
+}
+
+.mx-1 {
+  margin-left: .25rem !important
+}
+
+.footer-copyright {
+  overflow: hidden;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(0, 0, 0, 0.2)
+}
+
+.py-3 {
+  padding-top: 1rem !important
+}
+
+.py-3 {
+  padding-bottom: 1rem !important
+}
+.ft-class{
+  border-bottom: 3px solid #41aea9;
+  display: table-cell;
+  padding-bottom: 2px;
+}
+ul{
+  margin-top: 20px !important;
+}
+.fab{
+  font-size: 1.5rem;
+}
+.dropdown-divider {
+  height: 0;
+  margin: .5rem 0;
+  overflow: hidden;
+  border-top: 1px solid #e9ecef
+}
+
+.clearfix::after {
+  display: block;
+  clear: both;
+  content: ""
+}
+.membership{
+    background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.6)), url("/images/membership.jpg");
+    height: 100vh;
+}
+.membership-text{
+  padding-left: 12%;
+  color: White;
+  letter-spacing: 1px;
+font-family: 'Secular One', sans-serif;
+}
+section.pricing {
+background:#f7f7f7;
+}
+
+.pricing .card {
+  border: none;
+  border-radius: 1rem;
+  transition: all 0.2s;
+  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+}
+
+.pricing hr {
+  margin: 1.5rem 0;
+}
+
+.pricing .card-title {
+  margin: 0.5rem 0;
+  font-size: 0.9rem;
+  letter-spacing: .1rem;
+  font-weight: bold;
+}
+
+.pricing .card-price {
+  font-size: 3rem;
+  margin: 0;
+}
+
+.pricing .card-price .period {
+  font-size: 0.8rem;
+}
+
+.pricing ul li {
+  margin-bottom: 1rem;
+}
+
+.pricing .text-muted {
+  opacity: 0.7;
+}
+
+.pricing .btn {
+  font-size: 80%;
+  border-radius: 5rem;
+  letter-spacing: .1rem;
+  font-weight: bold;
+  padding: 1rem;
+  opacity: 0.7;
+  transition: all 0.2s;
+}
+
+/* Hover Effects on Card */
+
+@media (min-width: 992px) {
+  .pricing .card:hover {
+    margin-top: -.25rem;
+    margin-bottom: .25rem;
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.3);
+  }
+  .pricing .card:hover .btn {
+    opacity: 1;
+  }
+}
+#Events{
+  width:100%;
+  height:100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)), url("/images/Events.jpg");
+}
+#Event2{
+  padding:2% 7%;
+}
+#Training{
+  width:100%;
+  height:100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(to right, rgba(0,0,0,.2), rgba(0,0,0,.6)), url("/images/Training.jpg");
+}
+#Certification{
+  width:100%;
+  height:90vh;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(to right, rgba(0,0,0,.2), rgba(0,0,0,.7)), url("/images/certification.jpg");
+}
+#Awards{
+  width:100%;
+  height:90vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("/images/Awards.jpg");
+}
+#Partnership{
+  width:100%;
+  height:90vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(to right, rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url("/images/Partnerhip.jpg");
+}
+#Privacy{
+  font-family: 'Bree Serif', sans-serif !important;
+  padding:4% 10%;
+}
+.centered {
+    padding-top: 200px;
+    text-align: center;
+}
+
+.secret-text {
+  text-align: center;
+  font-size: 2rem;
+  color: #fff;
+  background-color: #000;
 }
