--- a/views/About.ejs
+++ b/views/About.ejs
@@ -1,3 +1,55 @@
 <%- include("partials/header") %>
-<h1>About Us</h1>
+<div  style="background:#f7f7f7; opacity:80%;">
+  <img src="/images/IDMA.png" class="center"style="width:5% ; height:5%;" alt="IDMA"><br>
+  <h1 style="text-align:center; font-size: 2.5rem !important;  font-family: 'Bree Serif', sans-serif !important;  font-weight: bolder !important; " > About Us</h1>
+</div>
+<section data-aos="fade-up" id="About">
+  <div class="About-para">
+    <h1 id="About-head">Who WE Are</h1>
+  </div>
+  <br>
+  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/1.jpg" class="d-block w-100" alt="...">
+        <div style="background-color:white; border:2px solid black;" class="carousel-caption d-none d-md-block rounded">
+          <h2 style=" color:black;font-size: 3.5rem !important;  font-family: 'Poppins', sans-serif !important;  font-weight: bolder !important;">First slide label</h2>
+          <p style=" color:black;font-size: 1.5rem !important;  font-family: 'Poppins', sans-serif !important;  font-weight: bolder !important;">Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="images/2.jpg" class="d-block w-100" alt="...">
+        <div style="background-color:white; border:2px solid black;" class="carousel-caption d-none d-md-block rounded">
+          <h2 style=" color:black;font-size: 3.5rem !important;  font-family: 'Poppins', sans-serif !important;  font-weight: bolder !important;">Second slide label</h2>
+          <p style="color:black; font-size: 1.5rem !important;  font-family: 'Poppins', sans-serif !important;  font-weight: bolder !important;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="images/3.jpg" class="d-block w-100" alt="...">
+        <div style="background-color:white; border:2px solid black;"class="carousel-caption d-none d-md-block rounded">
+          <h2 style=" color:black; font-size: 3.5rem !important;  font-family: 'Poppins', sans-serif !important;  font-weight: bolder !important;">Third slide label</h2>
+          <p style="color:black; font-size: 1.5rem !important;  font-family: 'Poppins', sans-serif !important;  font-weight: bolder !important;">Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span style="width:35%; height:35%;"class="carousel-control-prev-icon" aria-hidden="true"></span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span style="width:35%; height:35%;"class="carousel-control-next-icon" aria-hidden="true"></span>
+    </a>
+  </div>
+  <div class="jumbotron">
+    <h1 style="font-size: 2.5rem !important;  font-family: 'Poppins', sans-serif !important;  font-weight: bolder !important;" class="display-4">About IDMA</h1>
+    <p style="font-size: 1.2rem !important;  font-family: 'Poppins', sans-serif !important;  font-weight: bolder !important;" class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <hr class="my-4">
+    <p style="font-size: 1.1rem !important;  font-family: 'Poppins', sans-serif !important;  font-weight: bolder !important;" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <a class="btn btn-danger btn-lg" href="#" role="button">Learn more</a>
+  </div>
+</section>
 <%- include("partials/footer") %>
