--- a/views/Awards.ejs
+++ b/views/Awards.ejs
@@ -1,3 +1,9 @@
 <%- include("partials/header") %>
-<h1>Awards</h1>
+<section id="Awards">
+  <h1 data-aos="fade-down" data-aos-duration="3000" style="text-align:center; padding-top:10%; font-family: 'Bree Serif', sans-serif !important;  font-weight: bolder !important; color:white; font-size:3.8rem; letter-spacing:2px;"> IDMA Awards
+  </h1>
+  <p data-aos="fade-down" data-aos-duration="3000" data-aos-delay="800"
+    style="text-align:center; padding-top:8% !important;padding:0% 20%; font-family: 'Bree Serif', sans-serif !important;  font-weight: bolder !important; color:white; font-size:1.8rem; letter-spacing:1px;">Lorem ipsum dolor sit amet, consectetur
+    adipisicing elit,caecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</section>
 <%- include("partials/footer") %>
