--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header") %>
 <section data-aos="fade-down" data-aos-easing="linear"
-     data-aos-duration="500" id="Landing">
+     data-aos-duration="100" id="Landing">
 
   <div class="container">
     <div class="row">
@@ -15,24 +15,24 @@
   </div><br><br>
   <div class="card-deck">
     <div data-aos="zoom-in-left" data-aos-easing="linear"
-         data-aos-duration="600" class="card">
-      <img class="card-img-top" style="width:100%; height:180px;" src="https://www.setaswall.com/wp-content/uploads/2017/08/1440x2960-HD-Wallpaper-107-768x1579.jpg" alt="Card image cap">
+         data-aos-duration="100" class="card">
+      <img class="card-img-top" style="width:100%; height:200px;" src="/images/Ecard.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
       </div>
     </div>
     <div data-aos="zoom-in-down" data-aos-easing="linear"
-         data-aos-duration="600" class="card">
-      <img class="card-img-top" style="width:100%; height:180px;" src="https://www.setaswall.com/wp-content/uploads/2017/08/1440x2960-HD-Wallpaper-107-768x1579.jpg" alt="Card image cap">
+         data-aos-duration="100" class="card">
+      <img class="card-img-top" style="width:100%; height:200px;" src="/images/Ecard.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
       </div>
     </div>
     <div data-aos="zoom-in-right" data-aos-easing="linear"
-         data-aos-duration="600" class="card">
-      <img class="card-img-top" style="width:100%; height:180px;" src="https://www.setaswall.com/wp-content/uploads/2017/08/1440x2960-HD-Wallpaper-107-768x1579.jpg" alt="Card image cap">
+         data-aos-duration="100" class="card">
+      <img class="card-img-top" style="width:100%; height:200px;" src="/images/Ecard.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -41,15 +41,15 @@
   </div>
 </section>
 <section data-aos="fade-up" data-aos-easing="linear"
-     data-aos-duration="300" id="Home2">
+     data-aos-duration="100" id="Home2">
   <br>
   <h1>TOPIC</h1>
   <hr style="height: 2px; background: black">
   <br>
   <div class="card-deck">
     <div data-aos="zoom-in-down" data-aos-easing="linear"
-         data-aos-duration="300" class="card">
-      <img class="card-img-top" style="width:100%; height:180px;" src="https://cdn.pixabay.com/photo/2018/10/30/16/06/water-lily-3784022__340.jpg" alt="Card image cap">
+         data-aos-duration="100" class="card">
+      <img class="card-img-top" style="width:100%; height:200px;" src="/images/Ecard2.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -57,8 +57,8 @@
       </div>
     </div>
     <div data-aos="zoom-in-down" data-aos-easing="linear"
-         data-aos-duration="300"class="card">
-      <img class="card-img-top" style="width:100%; height:180px;" src="https://cdn.pixabay.com/photo/2018/10/30/16/06/water-lily-3784022__340.jpg" alt="Card image cap">
+         data-aos-duration="100"class="card">
+      <img class="card-img-top" style="width:100%; height:200px;" src="/images/Ecard2.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -66,8 +66,8 @@
       </div>
     </div>
     <div data-aos="zoom-in-down" data-aos-easing="linear"
-         data-aos-duration="300" class="card">
-      <img class="card-img-top" style="width:100%; height:180px;" src="https://cdn.pixabay.com/photo/2018/10/30/16/06/water-lily-3784022__340.jpg" alt="Card image cap">
+         data-aos-duration="100" class="card">
+      <img class="card-img-top" style="width:100%; height:200px;" src="images/Ecard2.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -77,15 +77,15 @@
   </div>
 </section>
 <section data-aos="fade-up" data-aos-easing="linear"
-     data-aos-duration="300" id="Home3">
+     data-aos-duration="100" id="Home3">
   <br>
   <h1>TOPIC</h1>
   <hr style="height: 2px; background: black">
   <br>
   <div class="card-deck">
     <div data-aos="zoom-in-down" data-aos-easing="linear"
-         data-aos-duration="300" class="card">
-      <img class="card-img-top" style="width:100%; height:180px;" src="https://cdn.pixabay.com/photo/2018/10/30/16/06/water-lily-3784022__340.jpg" alt="Card image cap">
+         data-aos-duration="100" class="card">
+      <img class="card-img-top" style="width:100%; height:200px;" src="images/Ecard3.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -93,8 +93,8 @@
       </div>
     </div>
     <div data-aos="zoom-in-down" data-aos-easing="linear"
-         data-aos-duration="300" class="card">
-      <img class="card-img-top" style="width:100%; height:180px;" src="https://cdn.pixabay.com/photo/2018/10/30/16/06/water-lily-3784022__340.jpg" alt="Card image cap">
+         data-aos-duration="100" class="card">
+      <img class="card-img-top" style="width:100%; height:200px;" src="images/Ecard3.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -102,8 +102,8 @@
       </div>
     </div>
     <div data-aos="zoom-in-down" data-aos-easing="linear"
-         data-aos-duration="300" class="card">
-      <img class="card-img-top" style="width:100%; height:180px;" src="https://cdn.pixabay.com/photo/2018/10/30/16/06/water-lily-3784022__340.jpg" alt="Card image cap">
+         data-aos-duration="100" class="card">
+      <img class="card-img-top" style="width:100%; height:200px;" src="images/Ecard3.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -113,27 +113,27 @@
   </div>
 </section>
 <section data-aos="fade-up" data-aos-easing="linear"
-     data-aos-duration="300" id="Home5">
+     data-aos-duration="100" id="Home5">
   <div class="features">
     <h1 style="color:black;">Why Join The IDMA?</h1>
     <hr style="height: 2px; background: black"><br>
     <div class="card-deck">
       <div data-aos="zoom-in-down" data-aos-easing="linear"
-           data-aos-duration="300"style="background-color:#52575d;" class="card">
+           data-aos-duration="100"style="background-color:#52575d;" class="card">
         <div class="card-body">
           <h2 style="color:rgba(255,255,255,.9);" class="card-title">Heading</h2>
           <p style="1.2rem; color:rgba(255,255,255,.9);" class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
       </div>
       <div data-aos="zoom-in-down" data-aos-easing="linear"
-           data-aos-duration="300" style="background-color:black" class="card">
+           data-aos-duration="100" style="background-color:black" class="card">
         <div class="card-body">
           <h2 style="color:rgba(255,255,255,.9);" class="card-title">Heading</h2>
           <p style="1.2rem; color:rgba(255,255,255,.9);;" class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
       </div>
       <div data-aos="zoom-in-down" data-aos-easing="linear"
-           data-aos-duration="300" style="background-color:#ff4b5c;" class="card">
+           data-aos-duration="100" style="background-color:#ff4b5c;" class="card">
         <div class="card-body">
           <h2 style="color:rgba(255,255,255,.9);" class="card-title">Heading</h2>
           <p style="1.2rem; color:rgba(255,255,255,.9);" class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -143,15 +143,15 @@
   </div>
 </section>
 <section data-aos="fade-up" data-aos-easing="linear"
-     data-aos-duration="300" id="Home4">
+     data-aos-duration="100" id="Home4">
   <br>
   <h1>TOPIC</h1>
   <hr style="height: 2px; background: black">
   <br>
   <div class="card-deck">
     <div data-aos="zoom-in-down" data-aos-easing="linear"
-         data-aos-duration="300" class="card">
-      <img class="card-img-top" style="width:100%; height:180px;" src="https://cdn.pixabay.com/photo/2018/10/30/16/06/water-lily-3784022__340.jpg" alt="Card image cap">
+         data-aos-duration="100" class="card">
+      <img class="card-img-top" style="width:100%; height:200px;" src="images/Ecard4.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -159,8 +159,8 @@
       </div>
     </div>
     <div data-aos="zoom-in-down" data-aos-easing="linear"
-         data-aos-duration="300" class="card">
-      <img class="card-img-top" style="width:100%; height:180px;" src="https://cdn.pixabay.com/photo/2018/10/30/16/06/water-lily-3784022__340.jpg" alt="Card image cap">
+         data-aos-duration="100" class="card">
+      <img class="card-img-top" style="width:100%; height:200px;" src="images/Ecard4.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -168,8 +168,8 @@
       </div>
     </div>
     <div data-aos="zoom-in-down" data-aos-easing="linear"
-         data-aos-duration="300" class="card">
-      <img class="card-img-top" style="width:100%; height:180px;" src="https://cdn.pixabay.com/photo/2018/10/30/16/06/water-lily-3784022__340.jpg" alt="Card image cap">
+         data-aos-duration="100" class="card">
+      <img class="card-img-top" style="width:100%; height:200px;" src="images/Ecard4.jpg" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
