--- a/views/Partnership.ejs
+++ b/views/Partnership.ejs
@@ -1,3 +1,10 @@
 <%- include("partials/header") %>
-<h1>Partnership Opportunities</h1>
+<section id="Partnership">
+<div style="padding:10% 10%"class="text-center">
+  <h1 data-aos="fade-down" data-aos-duration="3000" style="font-size:3.5rem; font-weight:bolder;font-family: 'Bree Serif', sans-serif !important;color:white; font-size:3.8rem; letter-spacing:1px;">Partnerhip Opportunities with IDMA </h1>
+  <p data-aos="fade-down" data-aos-duration="3000" data-aos-delay="1000"
+    style="padding-top:4% !important;   color:white; font-weight: bolder !important; font-size:1.8rem;;">Lorem ipsum dolor sit amet, consectetur
+    adipisicing elit,caecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+  </section>
 <%- include("partials/footer") %>
