--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,69 +1,41 @@
-<footer data-aos="fade-up"data-aos-easing="linear"
-     data-aos-duration="300" class="page-footer font-small stylish-color-dark pt-4">
+<footer style="padding-top:50px !important;" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="300" class="page-footer font-small bg-dark pt-4">
 
-  <!-- Footer Links -->
-  <div class="container text-center text-md-left">
+   <!-- Footer Links -->
+   <div class="container text-center text-md-left">
 
-    <!-- Grid row -->
-    <div class="row">
+     <!-- Grid row -->
+     <div class="row">
 
-      <!-- Grid column -->
-      <div class="col-md-4 mx-auto">
+       <!-- Grid column -->
+       <!-- Grid column -->
 
-        <!-- Content -->
-      <a href="/FAQ"> <h5 class="font-weight-bold text-uppercase mt-3 mb-4">FAQ</h5></a>
-        <p>Lorem ipsum dolor sit amet,
-          consectetur
-          adipisicing elit.</p>
+       <hr class="clearfix w-100 d-md-none">
 
-      </div>
-      <!-- Grid column -->
+       <!-- Grid column -->
+       <div class="col-md-2 col-lg-3">
 
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-2 mx-auto">
-
-        <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+         <!-- Links -->
+         <h5 class="font-weight-bold ft-class text-uppercase mt-3 mb-4">Company</h5>
 
         <ul class="list-unstyled">
+          <li class="footer-links">
+            <a href="/FAQ">FAQ</a>
+          </li>
           <li class="footer-links">
             <a href="/Privacy">Privacy Poclicy</a>
           </li>
           <li class="footer-links dropdown"> <a class=" dropdown-toggle" data-toggle="dropdown" data-target="dropdown_target" href="#">Blog & articles
-           <span class="caret"></span>
-          </a>
-        <div style="background-color:black"class="dropdown-menu" aria-labelledby="dropdown_target" >
+              <span class="caret"></span>
+            </a>
+            <div style="background-color:black" class="dropdown-menu" aria-labelledby="dropdown_target">
               <div class="dropdown-divider"></div>
-          <a href="/Blog" class="dropdown-item">News </a>
-          <a href="/Blog" class="dropdown-item">Interviews</a>
-        </div></li>
-        </ul>
-
-      </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-2 mx-auto">
-
-        <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
-
-        <ul class="list-unstyled">
+              <a href="/Blog" class="dropdown-item">News </a>
+              <a href="/Blog" class="dropdown-item">Interviews</a>
+            </div>
+          </li>
           <li class="footer-links">
             <a href="/Press">Press & Media</a>
           </li>
-          <li class="footer-links dropdown"> <a class=" dropdown-toggle" data-toggle="dropdown" data-target="dropdown_target" href="#">Jobs
-           <span class="caret"></span>
-          </a>
-        <div style="background-color:black"class="dropdown-menu" aria-labelledby="dropdown_target" >
-              <div class="dropdown-divider"></div>
-          <a href="/Jobs" class="dropdown-item">Job Seekers </a>
-          <a href="/Jobs" class="dropdown-item">Employers</a>
-        </div></li>
         </ul>
 
       </div>
@@ -72,24 +44,74 @@
       <hr class="clearfix w-100 d-md-none">
 
       <!-- Grid column -->
-      <div class="col-md-2 mx-auto">
+      <div class="col-md-2  col-lg-3">
 
         <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+        <h5 class="font-weight-bold text-uppercase ft-class mt-3 mb-4">Information</h5>
 
         <ul class="list-unstyled">
           <li class="footer-links">
             <a href="/Chapters">Chapters</a>
           </li>
           <li class="footer-links dropdown"> <a class=" dropdown-toggle" data-toggle="dropdown" data-target="dropdown_target" href="/Tools">Tools & resourses
-           <span class="caret"></span>
-          </a>
-        <div style="background-color:black"class="dropdown-menu" aria-labelledby="dropdown_target" >
+              <span class="caret"></span>
+            </a>
+            <div style="background-color:black" class="dropdown-menu" aria-labelledby="dropdown_target">
               <div class="dropdown-divider"></div>
-          <a href="/Tools" class="dropdown-item">White paper </a>
-          <a href="/Tools" class="dropdown-item">Articles</a>
-        </div></li>
+              <a href="/Tools" class="dropdown-item">White paper </a>
+              <a href="/Tools" class="dropdown-item">Articles</a>
+            </div>
+          </li>
+          <li class="footer-links dropdown"> <a class=" dropdown-toggle" data-toggle="dropdown" data-target="dropdown_target" href="#">Jobs
+              <span class="caret"></span>
+            </a>
+            <div style="background-color:black" class="dropdown-menu" aria-labelledby="dropdown_target">
+              <div class="dropdown-divider"></div>
+              <a href="/Jobs" class="dropdown-item">Job Seekers </a>
+              <a href="/Jobs" class="dropdown-item">Employers</a>
+            </div>
+          </li>
+          <li class="footer-links">
+            <a href="/Login">Login</a>
+          </li>
+        </ul>
 
+      </div>
+      <div class="col-md-4 col-lg-3">
+        <!-- Content -->
+          <ul style="text-align:left !important;" class="list-unstyled list-inline text-center py-2">
+            </li>
+            <li   class="list-inline-item">
+              <a  style="border-radius:0;"  href="/Membership" class="btn btn-danger ">Become A Member</a>
+            </li>
+          </ul>
+      </div>
+      <!-- Grid column -->
+      <!-- Grid column -->
+      <div style="padding-left:50px;" class="col-md-2  col-lg-3">
+            <h5  class="font-weight-bold ft-class text-uppercase mt-3 mb-4">Follow &nbsp; Us</h5>
+        <!-- Links --><br><br>
+        <ul class="list-unstyled list-inline ">
+          <li class="list-inline-item">
+            <a class="btn-floating btn-fb mx-1">
+              <i style="color:#3b5998;" class="fab fa-facebook-f"> </i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn-floating btn-tw mx-1">
+              <i style="color:#00acee;" class="fab fa-twitter"> </i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn-floating btn-gplus mx-1">
+              <i style="color:#dd4b39;" class="fab fa-google-plus-g"> </i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="btn-floating btn-li mx-1">
+              <i style="color:#0e76a8;"class="fab fa-linkedin-in"> </i>
+            </a>
+          </li>
         </ul>
 
       </div>
@@ -100,65 +122,21 @@
 
   </div>
   <!-- Footer Links -->
-
-  <hr>
-
-  <!-- Call to action -->
-  <ul class="list-unstyled list-inline text-center py-2">
-    <li class="list-inline-item">
-      <h5 class="mb-1">Register for free</h5>
-    </li>
-    <li class="list-inline-item">
-      <a href="#!" class="btn btn-danger btn-rounded">Login</a>
-    </li>
-  </ul>
-  <!-- Call to action -->
-
-  <hr>
-
   <!-- Social buttons -->
-  <ul class="list-unstyled list-inline text-center">
-    <li class="list-inline-item">
-      <a class="btn-floating btn-fb mx-1">
-        <i class="fab fa-facebook-f"> </i>
-      </a>
-    </li>
-    <li class="list-inline-item">
-      <a class="btn-floating btn-tw mx-1">
-        <i class="fab fa-twitter"> </i>
-      </a>
-    </li>
-    <li class="list-inline-item">
-      <a class="btn-floating btn-gplus mx-1">
-        <i class="fab fa-google-plus-g"> </i>
-      </a>
-    </li>
-    <li class="list-inline-item">
-      <a class="btn-floating btn-li mx-1">
-        <i class="fab fa-linkedin-in"> </i>
-      </a>
-    </li>
-    <li class="list-inline-item">
-      <a class="btn-floating btn-dribbble mx-1">
-        <i class="fab fa-dribbble"> </i>
-      </a>
-    </li>
-  </ul>
-  <!-- Social buttons -->
-
+<br><br>
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright
+  <div class="footer-copyright text-center py-3">© 2020 IDMA Copyright
     <a href="https://mdbootstrap.com/"></a>
   </div>
   <!-- Copyright -->
 
-</footer>
-<!-- Footer -->
+ </footer>
+ <!-- Footer -->
 
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
- </body>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+ <script>
+  AOS.init();
+</script>
+</body>
 
 </html>
